test/kubernetes/e2e/features/access_log/testdata/collector-secure_ipv6.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: otel-collector-conf
  labels:
    app: opentelemetry
    component: otel-collector-conf
data:
  otel-collector-config: |
    receivers:
      otlp:
        protocols:
          grpc:
            include_metadata: true
            endpoint: 0.0.0.0:4317
            tls:
              cert_file: /conf/collector.crt
              key_file: /conf/collector.key
    exporters:
      debug:
        verbosity: detailed
    service:
      extensions: []
      pipelines:
        logs:
          receivers: [otlp]
          processors: []
          exporters: [debug]
      telemetry:
        logs:
          level: "DEBUG"
          development: true
          encoding: "json"
  # openssl req -x509 -newkey rsa:4096 -sha256 -days 3650 \
  #   -nodes -keyout collector.key -out collector.crt \
  #   -subj "/CN=otel-collector.default.svc.cluster.local" \
  #   -addext "subjectAltName=DNS:collector.example.com"
  collector.crt: |
    -----BEGIN CERTIFICATE-----
    MIIFaTCCA1GgAwIBAgIUFV2mbavCasXIACIYJpZrmHnIuYowDQYJKoZIhvcNAQEL
[...]
    -----END CERTIFICATE-----
  collector.key: |
    -----BEGIN PRIVATE KEY-----
    MIIJQgIBADANBgkqhkiG9w0BAQEFAASCCSwwggkoAgEAAoICAQCqq5Yv8OILRaRq
[...]
    l6yxoBAggEdLi7TU8CEG23pJnPVidg==
    -----END PRIVATE KEY-----
---
apiVersion: v1
kind: Pod
metadata:
  name: otel-collector
  labels:
    app: opentelemetry
    component: otel-collector
    app.kubernetes.io/name: otel-collector
spec:
  containers:
  - command:
      - "/otelcol-contrib"
      - "--config"
      - "/conf/otel-collector-config.yaml"
    image: otel/opentelemetry-collector-contrib:0.116.1
    name: otel-collector
    resources:
      limits:
        cpu: 1
        memory: 2Gi
      requests:
        cpu: 200m
        memory: 400Mi
    ports: # Comment out ports for platforms as needed.
    - containerPort: 4317 # Default gRPC endpoint for OpenTelemetry receiver.
    volumeMounts:
    - name: otel-collector-config-vol
      mountPath: /conf
  volumes:
    - name: otel-collector-config-vol
      configMap:
        name: otel-collector-conf
        items:
          - key: otel-collector-config
            path: otel-collector-config.yaml
          - key: collector.crt
            path: collector.crt
          - key: collector.key
            path: collector.key
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  labels:
    app: opentelemetry
    component: otel-collector
    app.kubernetes.io/name: opentelemetry
spec:
  ports:
  - name: otlp-grpc # Default endpoint for OpenTelemetry gRPC receiver.
    port: 4317
    protocol: TCP
    targetPort: 4317
  selector:
    app.kubernetes.io/name: otel-collector
