test/kubernetes/e2e/features/access_log/testdata/edge-sslconfig.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: default
spec:
  virtualHost:
    domains:
      - httpbin.example.com
    routes:
      - matchers:
         - prefix: /
        routeAction:
          single:
            upstream:
              name: httpbin
              namespace: httpbin
---
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: httpbin
  namespace: httpbin
spec:
  kube:
    serviceName: httpbin
    serviceNamespace: httpbin
    servicePort: 8080
---
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
  namespace: gloo-gateway-edge-test
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway: {}
  proxyNames:
  - gateway-proxy
  ssl: false
  useProxyProto: false
  options:
    accessLoggingService:
      accessLog:
        - openTelemetryService:
            logName: sslconfig-example
            collector:
              endpoint: otel-collector.default.svc.cluster.local:4317
              authority: authority.example.com
              sslConfig:
                sni: otel-collector.default.svc.cluster.local
                verifySubjectAltName:
                  - collector.example.com
