test/kubernetes/e2e/features/access_log/testdata/edge.yaml
---
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
  name: gateway-proxy
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway: {}
  proxyNames:
  - gateway-proxy
  ssl: false
  useProxyProto: false
  options:
    accessLoggingService:
      accessLog:
        - openTelemetryService:
            logName: example
            collector:
              endpoint: otel-collector.default.svc.cluster.local:4317
              authority: authority.example.com
              insecure: true
            body:
              stringValue: "%REQ(USER-AGENT)%"
            attributes:
              values:
                - key: "foo"
                  value:
                    stringValue: "bar"
                - key: "bar"
                  value:
                    kvlistValue:
                      values:
                        - key: "baz"
                          value:
                            stringValue: "qux"
