test/kubernetes/e2e/features/access_log/testdata/httpbin-edge.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: default
spec:
  virtualHost:
    domains:
      - httpbin.example.com
    routes:
      - matchers:
         - prefix: /
        routeAction:
          single:
            upstream:
              name: httpbin
              namespace: httpbin
---
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: httpbin
  namespace: httpbin
spec:
  kube:
    serviceName: httpbin
    serviceNamespace: httpbin
    servicePort: 8080
