test/kubernetes/e2e/features/access_log/testdata/k8s-gateway-secure.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
---
apiVersion: gateway.solo.io/v1
kind: ListenerOption
metadata:
  name: access-logging
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  options:
    accessLoggingService:
      accessLog:
        - openTelemetryService:
            logName: secure-example
            collector:
              endpoint: otel-collector.default.svc.cluster.local:4317
              authority: authority.example.com
