test/kubernetes/e2e/features/access_log/testdata/k8s-gateway-sslconfig.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
---
apiVersion: gateway.solo.io/v1
kind: ListenerOption
metadata:
  name: access-logging
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  options:
    accessLoggingService:
      accessLog:
        - openTelemetryService:
            logName: sslconfig-example
            collector:
              endpoint: otel-collector.default.svc.cluster.local:4317
              authority: authority.example.com
              sslConfig:
                sni: otel-collector.default.svc.cluster.local
                verifySubjectAltName:
                  - collector.example.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  parentRefs:
    - name: gw
  hostnames:
    - httpbin.example.com
  rules:
    - backendRefs:
        - name: httpbin
          namespace: httpbin
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: bar
  namespace: httpbin
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
